--- a/ImageFeed-ios/Base.lproj/Main.storyboard
+++ b/ImageFeed-ios/Base.lproj/Main.storyboard
@@ -107,7 +107,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="98.473282442748086" y="-1130.2816901408451"/>
+            <point key="canvasLocation" x="-45" y="-1130"/>
         </scene>
         <!--Profile-->
         <scene sceneID="6S7-sd-asA">
@@ -135,14 +135,14 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="@ekaterina_nov" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VVo-Eb-zhH">
-                                <rect key="frame" x="16" y="204.66666666666666" width="361" height="15.666666666666657"/>
+                                <rect key="frame" x="16" y="204.66666666666666" width="361" height="16"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <color key="textColor" name="YP_Gray"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello, world!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lRv-XG-xr9">
-                                <rect key="frame" x="16" y="228.33333333333334" width="361" height="15.666666666666657"/>
+                                <rect key="frame" x="16" y="228.66666666666666" width="361" height="16"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <color key="textColor" name="YP_White"/>
@@ -244,42 +244,70 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="0" translatesAutoresizingMaskIntoConstraints="NO" id="mdp-Py-Lc5">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ate-i4-bSd">
                                 <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </imageView>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="414" placeholderIntrinsicHeight="414" image="0" translatesAutoresizingMaskIntoConstraints="NO" id="mdp-Py-Lc5">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="414"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </imageView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="mdp-Py-Lc5" firstAttribute="trailing" secondItem="Ate-i4-bSd" secondAttribute="trailing" id="Abm-VA-Fz5"/>
+                                    <constraint firstItem="mdp-Py-Lc5" firstAttribute="leading" secondItem="Ate-i4-bSd" secondAttribute="leading" id="Kqg-Gh-Myp"/>
+                                    <constraint firstItem="mdp-Py-Lc5" firstAttribute="top" secondItem="Ate-i4-bSd" secondAttribute="top" id="b3i-pP-fTj"/>
+                                    <constraint firstItem="mdp-Py-Lc5" firstAttribute="bottom" secondItem="Ate-i4-bSd" secondAttribute="bottom" id="qLA-N9-OCf"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="NeI-dM-657"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="lWP-7I-U7b"/>
+                                <connections>
+                                    <outlet property="delegate" destination="QXJ-X6-BsC" id="A1h-DC-daf"/>
+                                </connections>
+                            </scrollView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BBE-e1-ioB">
                                 <rect key="frame" x="8" y="8" width="48" height="48"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="48" id="de9-g5-XsE"/>
-                                    <constraint firstAttribute="height" constant="48" id="htj-S7-dbq"/>
+                                    <constraint firstAttribute="width" constant="48" id="GrD-M8-5Tr"/>
+                                    <constraint firstAttribute="height" constant="48" id="Jav-7H-lCO"/>
                                 </constraints>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" image="nav_back_button"/>
                                 <connections>
-                                    <action selector="didTapBackButton:" destination="QXJ-X6-BsC" eventType="touchUpInside" id="m6Q-tZ-erf"/>
+                                    <action selector="didTapBackButton" destination="QXJ-X6-BsC" eventType="touchUpInside" id="1hd-iu-EOD"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1YP-07-TYj">
+                                <rect key="frame" x="171.66666666666666" y="751" width="50" height="50"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" image="share_button"/>
+                                <connections>
+                                    <action selector="didTapShareButton" destination="QXJ-X6-BsC" eventType="touchUpInside" id="vu3-BH-u8x"/>
                                 </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="ZxC-lk-ocH"/>
                         <color key="backgroundColor" name="YP_Black"/>
                         <constraints>
-                            <constraint firstItem="BBE-e1-ioB" firstAttribute="top" secondItem="ZxC-lk-ocH" secondAttribute="top" constant="8" id="9H6-Jb-JUf"/>
-                            <constraint firstAttribute="trailing" secondItem="mdp-Py-Lc5" secondAttribute="trailing" id="Cas-c0-dC8"/>
-                            <constraint firstAttribute="bottom" secondItem="mdp-Py-Lc5" secondAttribute="bottom" id="JPr-DT-JIK"/>
-                            <constraint firstItem="BBE-e1-ioB" firstAttribute="leading" secondItem="ZxC-lk-ocH" secondAttribute="leading" constant="8" id="Jdw-QK-rp3"/>
-                            <constraint firstItem="mdp-Py-Lc5" firstAttribute="leading" secondItem="Hug-wo-uRh" secondAttribute="leading" id="hPa-EX-ZwA"/>
-                            <constraint firstItem="mdp-Py-Lc5" firstAttribute="top" secondItem="Hug-wo-uRh" secondAttribute="top" id="yo0-XB-fZ2"/>
+                            <constraint firstItem="1YP-07-TYj" firstAttribute="centerX" secondItem="Hug-wo-uRh" secondAttribute="centerX" id="0zy-pR-IHQ"/>
+                            <constraint firstItem="BBE-e1-ioB" firstAttribute="top" secondItem="ZxC-lk-ocH" secondAttribute="top" constant="8" id="6cf-Tc-HCC"/>
+                            <constraint firstItem="Ate-i4-bSd" firstAttribute="leading" secondItem="Hug-wo-uRh" secondAttribute="leading" id="E1N-BU-PsA"/>
+                            <constraint firstItem="Ate-i4-bSd" firstAttribute="bottom" secondItem="Hug-wo-uRh" secondAttribute="bottom" id="dMu-QE-FZy"/>
+                            <constraint firstItem="Ate-i4-bSd" firstAttribute="trailing" secondItem="Hug-wo-uRh" secondAttribute="trailing" id="i1T-db-3Rh"/>
+                            <constraint firstItem="ZxC-lk-ocH" firstAttribute="bottom" secondItem="1YP-07-TYj" secondAttribute="bottom" constant="51" id="oXb-3H-DkV"/>
+                            <constraint firstItem="Ate-i4-bSd" firstAttribute="top" secondItem="Hug-wo-uRh" secondAttribute="top" id="pWV-5g-bdv"/>
+                            <constraint firstItem="BBE-e1-ioB" firstAttribute="leading" secondItem="ZxC-lk-ocH" secondAttribute="leading" constant="8" id="qw7-gv-07v"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="50v-Jw-LSk"/>
                     <connections>
                         <outlet property="imageView" destination="mdp-Py-Lc5" id="RxF-zb-4AV"/>
+                        <outlet property="scrollView" destination="Ate-i4-bSd" id="CMA-K6-bPX"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eUF-QR-jt8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="940" y="-1130"/>
+            <point key="canvasLocation" x="715" y="-1130"/>
         </scene>
     </scenes>
     <resources>
@@ -287,6 +315,7 @@
         <image name="like_button_on" width="44" height="44"/>
         <image name="logout_button" width="44" height="44"/>
         <image name="nav_back_button" width="24" height="24"/>
+        <image name="share_button" width="50" height="50"/>
         <image name="tab_editorial_active" width="30" height="30"/>
         <image name="tab_profile_active" width="30" height="30"/>
         <image name="user_pick" width="70" height="70"/>
