--- a/ImageFeed-ios/Base.lproj/Main.storyboard
+++ b/ImageFeed-ios/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -116,75 +117,10 @@
                     <view key="view" contentMode="scaleToFill" id="IuR-Wy-NCf">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="user_pick" translatesAutoresizingMaskIntoConstraints="NO" id="dQu-9M-EbC">
-                                <rect key="frame" x="16" y="91" width="70" height="70"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                        <integer key="value" value="35"/>
-                                    </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
-                                </userDefinedRuntimeAttributes>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Екатерина Новикова" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OuB-f9-TbZ">
-                                <rect key="frame" x="16" y="169" width="361" height="27.666666666666657"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="23"/>
-                                <color key="textColor" name="YP_White"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="@ekaterina_nov" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VVo-Eb-zhH">
-                                <rect key="frame" x="16" y="204.66666666666666" width="361" height="16"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                <color key="textColor" name="YP_Gray"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello, world!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lRv-XG-xr9">
-                                <rect key="frame" x="16" y="228.66666666666666" width="361" height="16"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                <color key="textColor" name="YP_White"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hd1-3z-Gad">
-                                <rect key="frame" x="333" y="104" width="44" height="44"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal" image="logout_button"/>
-                                <connections>
-                                    <action selector="didTapLogout:" destination="66i-Tl-84a" eventType="touchUpInside" id="8Rg-tG-W7b"/>
-                                </connections>
-                            </button>
-                        </subviews>
                         <viewLayoutGuide key="safeArea" id="eSw-ss-oE4"/>
-                        <color key="backgroundColor" name="YP_Black"/>
-                        <constraints>
-                            <constraint firstItem="VVo-Eb-zhH" firstAttribute="top" secondItem="OuB-f9-TbZ" secondAttribute="bottom" constant="8" id="0J1-oz-uzc"/>
-                            <constraint firstItem="dQu-9M-EbC" firstAttribute="top" secondItem="eSw-ss-oE4" secondAttribute="top" constant="32" id="3DK-5w-NpH"/>
-                            <constraint firstItem="Hd1-3z-Gad" firstAttribute="trailing" secondItem="OuB-f9-TbZ" secondAttribute="trailing" id="7Wl-2d-CgS"/>
-                            <constraint firstItem="eSw-ss-oE4" firstAttribute="trailing" secondItem="Hd1-3z-Gad" secondAttribute="trailing" constant="16" id="Ge3-2g-lPC"/>
-                            <constraint firstItem="dQu-9M-EbC" firstAttribute="leading" secondItem="eSw-ss-oE4" secondAttribute="leading" constant="16" id="U5L-CX-yCv"/>
-                            <constraint firstItem="VVo-Eb-zhH" firstAttribute="leading" secondItem="dQu-9M-EbC" secondAttribute="leading" id="X4s-Ma-bai"/>
-                            <constraint firstItem="lRv-XG-xr9" firstAttribute="top" secondItem="VVo-Eb-zhH" secondAttribute="bottom" constant="8" id="XKr-BJ-aUX"/>
-                            <constraint firstItem="lRv-XG-xr9" firstAttribute="leading" secondItem="dQu-9M-EbC" secondAttribute="leading" id="bUM-pC-jgy"/>
-                            <constraint firstItem="OuB-f9-TbZ" firstAttribute="top" secondItem="dQu-9M-EbC" secondAttribute="bottom" constant="8" id="f98-tG-EIx"/>
-                            <constraint firstItem="Hd1-3z-Gad" firstAttribute="centerY" secondItem="dQu-9M-EbC" secondAttribute="centerY" id="fIb-k5-0Nt"/>
-                            <constraint firstItem="VVo-Eb-zhH" firstAttribute="trailing" secondItem="OuB-f9-TbZ" secondAttribute="trailing" id="hAg-9R-3Hs"/>
-                            <constraint firstItem="OuB-f9-TbZ" firstAttribute="leading" secondItem="dQu-9M-EbC" secondAttribute="leading" id="ndV-aP-kh8"/>
-                            <constraint firstItem="dQu-9M-EbC" firstAttribute="trailing" relation="lessThanOrEqual" secondItem="Hd1-3z-Gad" secondAttribute="leading" id="t29-Vd-q59"/>
-                            <constraint firstItem="lRv-XG-xr9" firstAttribute="trailing" secondItem="OuB-f9-TbZ" secondAttribute="trailing" id="wzR-kv-nCY"/>
-                        </constraints>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="" image="tab_profile_active" id="vtd-qO-C4T"/>
-                    <connections>
-                        <outlet property="loginNameLabel" destination="VVo-Eb-zhH" id="Tzz-TT-QTU"/>
-                        <outlet property="logoutButton" destination="Hd1-3z-Gad" id="BJz-QM-ogL"/>
-                        <outlet property="profileTextLabel" destination="lRv-XG-xr9" id="xpp-Up-sse"/>
-                        <outlet property="userNameLabel" destination="OuB-f9-TbZ" id="gxA-WA-LBl"/>
-                        <outlet property="userPickImageView" destination="dQu-9M-EbC" id="0Z0-gZ-KkE"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="d65-xY-B4F" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -313,20 +249,18 @@
     <resources>
         <image name="0" width="200" height="132"/>
         <image name="like_button_on" width="44" height="44"/>
-        <image name="logout_button" width="44" height="44"/>
         <image name="nav_back_button" width="24" height="24"/>
         <image name="share_button" width="50" height="50"/>
         <image name="tab_editorial_active" width="30" height="30"/>
         <image name="tab_profile_active" width="30" height="30"/>
-        <image name="user_pick" width="70" height="70"/>
         <namedColor name="YP_Black">
             <color red="0.10199999809265137" green="0.10599999874830246" blue="0.13300000131130219" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="YP_Gray">
-            <color red="0.68199998140335083" green="0.68599998950958252" blue="0.70599997043609619" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="YP_White">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
